Fixed slideshow buttons placement on Safari and removed unnecessary slides

--- a/style1.css
+++ b/style1.css
@@ -200,6 +200,9 @@ h3 {
   right: 0;
   border-radius: 3px 0 0 3px;
 }
+.prev {
+    left: 0;
+}
 .prev:hover, .next:hover {
   background-color: rgba(0,0,0,0.8);
 }
